--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   image_picker: ^1.0.2
   firebase_storage: ^11.2.6
   cloud_firestore: ^4.8.5
+  cached_network_image: ^3.2.3
+  country_code_picker: ^3.0.0
+  intl_phone_field: ^3.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
