--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cached_network_image: ^3.2.3
   country_code_picker: ^3.0.0
   intl_phone_field: ^3.2.0
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
